--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -6,12 +6,16 @@
   "type": "module",
   "scripts": {
     "build": "tsc -b",
-    "dev": "tsc -b && node ./dist/index.js"
+    "start": " node ./dist/index.js",
+    "dev": "npm run build && npm run start"
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/express": "^5.0.6",
-    "express": "^5.2.1"
+    "@types/jsonwebtoken": "^9.0.10",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "zod": "^4.3.5"
   },
   "keywords": [],
   "author": "",
