--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"tsc -b",
-    "dev":"tsc -b && node ./dist/index.js"
+    "build": "tsc -b",
+    "start": "node ./dist/index.js",
+    "dev": "npm run build && npm run start"
   },
-  "dependencies":{
-    "@repo/typescript-config":"workspace:*"
+  "dependencies": {
+    "@repo/typescript-config": "workspace:*",
+    "@types/ws": "^8.18.1",
+    "ws": "^8.19.0"
   },
   "keywords": [],
   "author": "",
