--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "@repo/db",
+  "name": "@repo/backend-common",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "exports":{
+    "./config.ts":"./src/config.ts"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@repo/typescript-config": "workspace:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^7.3.0",
-    "prisma": "^7.3.0"
-  },
-  "devDependencies":{
-    "@repo/typescript-config":"workspace:*"
+    "@types/node": "^22.15.3"
   }
 }
