--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "@repo/db",
+  "name": "@repo/common",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "exports":{
+   "./types.ts":"./src/types.ts"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
+
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^7.3.0",
-    "prisma": "^7.3.0"
-  },
-  "devDependencies":{
+    "zod": "^4.3.5",
     "@repo/typescript-config":"workspace:*"
   }
 }
