--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "exports": {
+    "./prisma.ts": "./src/prisma.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "dotenv": "^17.2.3",
     "prisma": "^7.3.0"
   },
-  "devDependencies":{
-    "@repo/typescript-config":"workspace:*"
+  "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
+    "@types/node": "^25.0.10"
   }
 }
