--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type":"module",
   "exports":{
    "./types.ts":"./src/types.ts"
   },
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
