--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,14 +11,17 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.13.4",
     "@repo/common": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@repo/backend-common":"workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.0",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
