Implement lodash debounce method

--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -20,6 +20,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash": "^4.17.23",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.2",
     "cookie-parser": "^1.4.7",
@@ -27,6 +28,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "lodash": "^4.17.23",
     "zod": "^4.3.5"
   },
   "keywords": [],
