--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -12,6 +12,7 @@
     "@repo/typescript-config": "workspace:*",
     "@repo/backend-common": "workspace:*",
     "@types/jsonwebtoken": "^9.0.10",
+    "@repo/db":"workspace:*",
     "@types/ws": "^8.18.1",
     "jsonwebtoken": "^9.0.3",
     "ws": "^8.19.0"
