--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.13.4",
+    "@repo/backend-common": "workspace:*",
     "@repo/common": "workspace:*",
     "@repo/ui": "workspace:*",
-    "@repo/backend-common":"workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/ws": "^8.18.1",
     "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "ws": "^8.19.0",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
