--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.13.4",
-
     "@repo/backend-common": "workspace:*",
     "@repo/common": "workspace:*",
     "@repo/ui": "workspace:*",
@@ -22,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.3",
     "next": "16.1.0",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
@@ -33,7 +33,6 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-
     "ws": "^8.19.0",
     "zustand": "^5.0.11"
   },
